--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -14,6 +14,42 @@ $lg: 1920px
 .homepage-container
     cursor: default
 
+    .hero
+        height: 750px
+        display: flex
+        flex-direction: column
+        position: relative
+        color: white
+        z-index: 1
+        background-color: $primary
+
+        &::after
+            content: ''
+            display: block
+            position: absolute
+            left: 0
+            top: 0
+            width: 100%
+            height: 100%
+            opacity: 0.05
+            background-image: url('https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80')
+            background-repeat: no-repeat
+            background-position: 50% 0
+            background-position-y: center
+            background-size: cover
+            pointer-events: none
+            filter: blur(1.5px)
+
+        .carousel
+            width: 100%
+            height: 750px
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            background-color: transparent
+            z-index: 10
+
     .paper
         height: 750px
         display: flex
@@ -39,6 +75,19 @@ $lg: 1920px
             background-position-y: center
             background-size: cover
             filter: blur(1.5px)
+
+    .devices
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        padding: 45px 10px
+        overflow: hidden
+
+        .product-image
+            width: auto
+            height: 300px
+            border: 1px solid black
 
     .testimonial-container
         display: flex
