--- a/src/components/Cart/styles.sass
+++ b/src/components/Cart/styles.sass
@@ -88,3 +88,13 @@ $lg: 1920px
                 width: 400px
                 padding: 10px
                 background-color: $background
+
+                @media screen and ( max-width: $sm )
+                    width: 100%
+
+                .item
+                    display: flex
+                    justify-content: space-between
+                    align-items: center
+                    padding-block: 5px
+                    width: 100%
