--- a/src/components/Cart/CartItem/styles.sass
+++ b/src/components/Cart/CartItem/styles.sass
@@ -11,6 +11,7 @@ $lg: 1920px
     justify-content: flex-start
     align-items: flex-start
     width: 100%
+    height: 212px
     border: 1px solid black
     padding-block: 5px
     margin-block: 10px
@@ -33,20 +34,52 @@ $lg: 1920px
     .info
         display: flex
         flex-direction: column
-        justify-content: center
+        justify-content: flex-start
         align-items: flex-start
         width: 100%
+        height: 100%
         padding-right: 20px
         background-color: lightblue
 
         @media screen and ( max-width: $sm )
             padding-right: 0
 
-        .title-and-subtotal,
-        .options
+        .title-and-subtotal
             display: flex
             justify-content: space-between
             align-items: center
             width: 100%
             background-color: rgba(blue, 0.2)
             margin-bottom: 10px
+
+        .options
+            display: flex
+            justify-content: space-between
+            align-items: flex-end
+            width: 100%
+            height: 100%
+            background-color: rgba(blue, 0.2)
+
+            .numeric-quantity-button
+                display: flex
+                justify-content: space-between
+                align-items: center
+                width: 125px
+                height: fit-content
+                border: 1px solid rgba(grey, 0.5)
+                border-radius: 5px
+                background-color: white
+                padding: 1px
+
+                .button
+                    min-width: 40px
+                    width: 40px
+                    height: 32px
+                    background-color: #0c6961
+
+                    &:hover
+                        background-color: rgba(#0c6961, 0.8)
+
+                    .icon
+                        font-size: 15px
+                        color: white
