--- a/src/components/Cart/CartItem/styles.sass
+++ b/src/components/Cart/CartItem/styles.sass
@@ -12,18 +12,26 @@ $lg: 1920px
     align-items: flex-start
     width: 100%
     height: 212px
-    border: 1px solid black
+    //border: 1px solid black
     padding-block: 5px
     margin-block: 10px
+
+    @media screen and ( max-width: $sm )
+        height: 100%
 
     .image-container
         display: flex
         justify-content: center
         align-items: center
-        width: 320px
+        width: 280px
+        min-width: 280px
         height: 200px
         margin-right: 25px
         background-color: white
+
+        @media screen and ( max-width: $lg )
+            width: 250px
+            min-width: 250px
 
         @media screen and ( max-width: $sm )
             display: none
@@ -39,7 +47,7 @@ $lg: 1920px
         width: 100%
         height: 100%
         padding-right: 20px
-        background-color: lightblue
+        //background-color: lightblue
 
         @media screen and ( max-width: $sm )
             padding-right: 0
@@ -49,7 +57,7 @@ $lg: 1920px
             justify-content: space-between
             align-items: center
             width: 100%
-            background-color: rgba(blue, 0.2)
+            //background-color: rgba(blue, 0.2)
             margin-bottom: 10px
 
         .options
@@ -58,7 +66,7 @@ $lg: 1920px
             align-items: flex-end
             width: 100%
             height: 100%
-            background-color: rgba(blue, 0.2)
+            //background-color: rgba(blue, 0.2)
 
             .numeric-quantity-button
                 display: flex
