--- a/src/components/Cart/styles.sass
+++ b/src/components/Cart/styles.sass
@@ -15,8 +15,8 @@ $lg: 1920px
 /* === Selectors === */
 
 .main
-    background-color: lightskyblue
     cursor: default
+    background-color: $background
 
     .header
         height: 250px
@@ -49,13 +49,13 @@ $lg: 1920px
         display: flex
         justify-content: center
         align-items: center
-        padding: 15px 150px
+        padding: 25px 150px
 
         @media screen and ( max-width: $md )
-            padding: 15px 50px
+            padding: 25px 50px
 
         @media screen and ( max-width: $xs )
-            padding: 15px
+            padding: 25px
 
         .cart
             display: flex
@@ -65,7 +65,7 @@ $lg: 1920px
             padding: 10px
             background-color: #e7e7e7
 
-            @media screen and ( max-width: $sm )
+            @media screen and ( max-width: $md )
                 flex-direction: column
 
             .products
@@ -75,7 +75,7 @@ $lg: 1920px
                 align-items: flex-start
                 width: 100%
                 padding-right: 25px
-                background-color: lightgreen
+                //background-color: lightgreen
 
                 @media screen and ( max-width: $sm )
                     padding-right: 0
@@ -89,7 +89,7 @@ $lg: 1920px
                 padding: 10px
                 background-color: $background
 
-                @media screen and ( max-width: $sm )
+                @media screen and ( max-width: $md )
                     width: 100%
 
                 .item
