Hero new background; Phones page header

--- a/src/components/Cart/styles.sass
+++ b/src/components/Cart/styles.sass
@@ -27,6 +27,7 @@ $lg: 1920px
         color: white
         padding-inline: 15px
         background-color: $primary
+        z-index: 1
 
         &::after
             content: ''
