--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -32,7 +32,7 @@ $lg: 1920px
             width: 100%
             height: 100%
             opacity: 0.05
-            background-image: url('https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80')
+            background-image: url('../../assets/hero-background.jpg')
             background-repeat: no-repeat
             background-position: 50% 0
             background-position-y: center
