--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -15,7 +15,7 @@ $lg: 1920px
     cursor: default
 
     .hero
-        height: 750px
+        height: 450px
         display: flex
         flex-direction: column
         position: relative
@@ -34,21 +34,11 @@ $lg: 1920px
             opacity: 0.05
             background-image: url('../../assets/hero-background.jpg')
             background-repeat: no-repeat
-            background-position: 50% 0
-            background-position-y: center
+            background-position: 50% 45%
+            // background-position-y: center
             background-size: cover
             pointer-events: none
             filter: blur(1.5px)
-
-        .carousel
-            width: 100%
-            height: 750px
-            display: flex
-            flex-direction: column
-            justify-content: center
-            align-items: center
-            background-color: transparent
-            z-index: 10
 
     .paper
         height: 750px
