--- a/src/components/Cart/styles.sass
+++ b/src/components/Cart/styles.sass
@@ -64,6 +64,7 @@ $lg: 1920px
             align-items: flex-start
             width: 100%
             padding: 10px
+            border-radius: 10px
             background-color: #e7e7e7
 
             @media screen and ( max-width: $md )
@@ -88,6 +89,7 @@ $lg: 1920px
                 align-items: flex-start
                 width: 400px
                 padding: 10px
+                border-radius: 5px
                 background-color: $background
 
                 @media screen and ( max-width: $md )
