--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -1,7 +1,8 @@
 /* === Colors === */
 
 $primary: #0c6961
-$secondary: #fbf3f0
+$secondary: #f47f60
+$background: #fbf3f0
 
 /* === Breakpoints === */
 
@@ -15,13 +16,27 @@ $lg: 1920px
     cursor: default
 
     .hero
-        height: 450px
+        height: 500px
         display: flex
         flex-direction: column
+        justify-content: center
+        align-items: flex-start
         position: relative
         color: white
         z-index: 1
+        padding-inline: 175px
         background-color: $primary
+
+        @media screen and ( max-width: $md )
+            padding-inline: 125px
+
+        @media screen and ( max-width: $sm )
+            padding: 45px 20px
+            height: fit-content
+
+        @media screen and ( max-width: $xs )
+            padding: 45px 20px
+            height: fit-content
 
         &::after
             content: ''
@@ -31,14 +46,41 @@ $lg: 1920px
             top: 0
             width: 100%
             height: 100%
-            opacity: 0.05
+            opacity: 0.1
             background-image: url('../../assets/hero-background.jpg')
             background-repeat: no-repeat
             background-position: 50% 45%
-            // background-position-y: center
             background-size: cover
             pointer-events: none
             filter: blur(1.5px)
+
+        .subtitle
+            width: 50%
+            margin: 20px 0 50px // top sides bottom
+
+            @media screen and ( max-width: $sm )
+                width: 75%
+
+            @media screen and ( max-width: $xs )
+                width: 100%
+
+        .button
+            color: $secondary
+            width: 180px
+            height: 40px
+            background-color: transparent
+            border: 2px solid $secondary
+            border-radius: 25px
+            text-transform: capitalize
+            font-weight: 600
+            font-size: 16px
+            letter-spacing: 1.5px
+            transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out
+            z-index: 2
+
+            &:hover
+                color: white
+                background-color: $secondary
 
     .paper
         height: 750px
@@ -85,7 +127,7 @@ $lg: 1920px
         height: fit-content
         width: 100%
         color: black
-        background-color: $secondary
+        background-color: $background
         padding: 20px 200px 0
 
         @media screen and ( max-width: $lg )
