--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -3,7 +3,7 @@
 $primary: #0c6961
 $secondary: #f47f60
 $background: #fafafa
-// $background: #fbf3f0
+$testimonial-background: #fbf3f0
 
 /* === Breakpoints === */
 
@@ -147,44 +147,31 @@ $lg: 1920px
             pointer-events: none
             filter: blur(1.5px)
 
-    .paper
-        height: 750px
-        display: flex
-        flex-direction: column
-        justify-content: center
-        align-items: center
-        color: white
-        background-color: $primary
-        border-radius: 0
+    // .paper
+    //     height: 750px
+    //     display: flex
+    //     flex-direction: column
+    //     justify-content: center
+    //     align-items: center
+    //     color: white
+    //     background-color: $primary
+    //     border-radius: 0
 
-        &::after
-            content: ''
-            display: block
-            position: absolute
-            left: 0
-            top: 0
-            width: 100%
-            height: 100%
-            opacity: 0.05
-            background-image: url('https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80')
-            background-repeat: no-repeat
-            background-position: 50% 0
-            background-position-y: center
-            background-size: cover
-            filter: blur(1.5px)
-
-    .devices
-        display: flex
-        flex-direction: column
-        justify-content: center
-        align-items: center
-        padding: 45px 10px
-        overflow: hidden
-
-        .product-image
-            width: auto
-            height: 300px
-            border: 1px solid black
+    //     &::after
+    //         content: ''
+    //         display: block
+    //         position: absolute
+    //         left: 0
+    //         top: 0
+    //         width: 100%
+    //         height: 100%
+    //         opacity: 0.05
+    //         background-image: url('https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80')
+    //         background-repeat: no-repeat
+    //         background-position: 50% 0
+    //         background-position-y: center
+    //         background-size: cover
+    //         filter: blur(1.5px)
 
     .testimonial-container
         display: flex
@@ -192,8 +179,8 @@ $lg: 1920px
         height: fit-content
         width: 100%
         color: black
-        background-color: $background
-        padding: 20px 200px 0
+        background-color: $testimonial-background
+        padding: 40px 200px 0
 
         @media screen and ( max-width: $lg )
             padding-inline: 100px
@@ -202,7 +189,7 @@ $lg: 1920px
             padding-inline: 0
 
         .testimonial
-            height: 400px
+            height: 350px
             width: 100%
             display: flex
             flex-direction: column
