--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -7,7 +7,7 @@ $testimonial-background: #fbf3f0
 
 /* === Breakpoints === */
 
-$vs: 400px
+$vs: 500px
 $xs: 600px
 $sm: 960px
 $md: 1280px
@@ -129,7 +129,7 @@ $lg: 1920px
         z-index: 1
         padding: 30px 0
         height: fit-content
-        background-color: rgba(black, 0.3)
+        background-color: $primary
 
         &::after
             content: ''
@@ -146,32 +146,6 @@ $lg: 1920px
             background-size: cover
             pointer-events: none
             filter: blur(1.5px)
-
-    // .paper
-    //     height: 750px
-    //     display: flex
-    //     flex-direction: column
-    //     justify-content: center
-    //     align-items: center
-    //     color: white
-    //     background-color: $primary
-    //     border-radius: 0
-
-    //     &::after
-    //         content: ''
-    //         display: block
-    //         position: absolute
-    //         left: 0
-    //         top: 0
-    //         width: 100%
-    //         height: 100%
-    //         opacity: 0.05
-    //         background-image: url('https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80')
-    //         background-repeat: no-repeat
-    //         background-position: 50% 0
-    //         background-position-y: center
-    //         background-size: cover
-    //         filter: blur(1.5px)
 
     .testimonial-container
         display: flex
@@ -219,3 +193,78 @@ $lg: 1920px
                     flex-direction: column
                     justify-content: flex-start
                     align-items: flex-start
+
+    footer
+        background-color: #26272b
+        border-top: 1px solid black
+        width: 100%
+        height: fit-content
+        padding: 20px 60px
+
+        @media screen and ( max-width: $xs )
+            padding: 20px
+
+        .wrapper
+            display: flex
+            justify-content: space-between
+            align-items: center
+            width: 100%
+
+            @media screen and ( max-width: $vs )
+                flex-direction: column
+                justify-content: center
+                align-items: center
+
+            .content
+                display: flex
+                flex-direction: column
+                justify-content: flex-start
+                align-items: flex-start
+
+                @media screen and ( max-width: $vs )
+                    justify-content: center
+                    align-items: center
+
+            .contact
+                display: flex
+                flex-direction: row
+                justify-content: flex-end
+                align-items: flex-end
+
+                .linkedin
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    border-radius: 50%
+                    width: 40px
+                    height: 40px
+                    margin-left: 7px
+                    color: #818a91
+                    background-color: #33353d
+                    transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out
+
+                    @media screen and ( max-width: $vs )
+                        margin: 20px 0 0 0
+
+                    &:hover
+                        color: white
+                        background-color: #0A66C2
+
+                .github
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    border-radius: 50%
+                    width: 40px
+                    height: 40px
+                    margin-left: 7px
+                    color: #818a91
+                    background-color: #33353d
+                    transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out
+
+                    @media screen and ( max-width: $vs )
+                        margin-top: 20px
+
+                    &:hover
+                        color: white
+                        background-color: #1b1f23
