Loaing animation and favicon

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,16 @@
   padding: 0
   box-sizing: border-box
   font-family: "Nunito", sans-serif
+
+.loading-animation
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  width: 100vw
+  height: 100vh
+
+  h3
+    color: #0c6961
+    letter-spacing: 1px
+    margin-top: 20px
