--- a/src/components/BackToTopButton/styles.sass
+++ b/src/components/BackToTopButton/styles.sass
@@ -12,6 +12,7 @@
     border-radius: 25px
     background-color: rgba(grey, 0.1)
     transition: background-color 0.25s ease-in-out, transform 0.3s ease-in-out
+    user-select: none
 
     &:hover
         background-color: rgba(grey, 0.3)
