--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -115,10 +115,18 @@ $lg: 1920px
                     width: 100%
 
             .about-text
-                font-size: 20px
+                font-size: 25px
+                margin-block: 10px
 
                 @media screen and ( max-width: 875px )
                     text-align: center
+                    font-size: 20px
+
+            .paragraph
+                display: flex
+                flex-direction: column
+                justify-content: center
+                align-items: center
 
     .statistics
         display: flex
