Fixing 100vh problem

--- a/src/components/Cart/styles.sass
+++ b/src/components/Cart/styles.sass
@@ -17,6 +17,7 @@ $lg: 1920px
 .main
     cursor: default
     background-color: $background
+    min-height: 100vh
 
     .header
         height: 250px
