--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -128,6 +128,48 @@ $lg: 1920px
                 justify-content: center
                 align-items: center
 
+        .categories
+            display: flex
+            justify-content: center
+            align-items: center
+            width: fit-content
+
+            @media screen and ( max-width: $sm )
+                flex-direction: column
+
+            .category-box
+                position: relative
+                width: 408px
+                height: 334px
+                overflow: hidden
+                float: right
+                border: 1px solid $background
+                border-radius: 10px
+                margin: 10px
+                background-color: rgba(black, 0.5)
+
+                @media screen and ( max-width: $xs )
+                    width: 100%
+
+                img
+                    width: 100%
+                    height: 100%
+                    object-fit: cover
+                    object-position: center center
+                    filter: blur(2px)
+                    transition: 1s
+
+                    &:hover
+                        opacity: 0.5
+                        transform: scale(1.2)
+                        filter: blur(0)
+
+                .category-button
+                    padding: 15px
+                    position: absolute
+                    bottom: 0
+                    left: 0
+
     .statistics
         display: flex
         flex-direction: column
