--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -88,54 +88,85 @@ $lg: 1920px
         align-items: center
         padding: 40px 20px
         margin-bottom: 10px
-        overflow-x: hidden
 
         .wrapper
             display: flex
             justify-content: space-between
-            align-items: center
-            width: 800px
+            align-items: flex-start
+            width: 1100px
 
-            @media screen and ( max-width: 875px )
-                flex-direction: column
+            @media screen and ( max-width: 1125px )
                 width: 100%
-                justify-content: center
-                padding: 0 20px
+                padding-inline: 100px
+
+            @media screen and ( max-width: $sm )
+                padding-inline: 10px
 
             .about-image
-                width: 350px
-                height: auto
-                margin-right: 50px
+                width: 600px
+                height: 400px
+                object-fit: cover
+                object-position: 50% 70%
+                border-radius: 10px
+                margin-right: 25px
 
-                @media screen and ( max-width: 875px )
-                    margin-bottom: 20px
-                    margin-right: 0
-
-                @media screen and ( max-width: $xs )
-                    width: 100%
+                @media screen and ( max-width: 1125px )
+                    display: none
 
             .about-text
-                font-size: 25px
-                margin-block: 10px
-
-                @media screen and ( max-width: 875px )
-                    text-align: center
-                    font-size: 20px
-
-            .paragraph
                 display: flex
                 flex-direction: column
-                justify-content: center
-                align-items: center
+                justify-content: flex-start
+                align-items: flex-start
+
+        // .wrapper
+        //     display: flex
+        //     justify-content: space-between
+        //     align-items: center
+        //     width: 800px
+
+        //     @media screen and ( max-width: 875px )
+        //         flex-direction: column
+        //         width: 100%
+        //         justify-content: center
+        //         padding: 0 20px
+
+        //     .about-image
+        //         width: 350px
+        //         height: auto
+        //         margin-right: 50px
+
+        //         @media screen and ( max-width: 875px )
+        //             margin-bottom: 20px
+        //             margin-right: 0
+
+        //         @media screen and ( max-width: $xs )
+        //             width: 100%
+
+        //     .about-text
+        //         font-size: 25px
+        //         margin-block: 10px
+
+        //         @media screen and ( max-width: 875px )
+        //             text-align: center
+        //             font-size: 20px
+
+        //     .paragraph
+        //         display: flex
+        //         flex-direction: column
+        //         justify-content: center
+        //         align-items: center
 
         .categories
             display: flex
             justify-content: center
             align-items: center
             width: fit-content
+            margin-top: 20px
 
             @media screen and ( max-width: $sm )
                 flex-direction: column
+                width: 100%
 
             .category-box
                 position: relative
@@ -169,6 +200,7 @@ $lg: 1920px
                     position: absolute
                     bottom: 0
                     left: 0
+                    // background-color: rgba(lightblue, 0.2)
 
     .statistics
         display: flex
