--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -92,7 +92,7 @@ $lg: 1920px
         .wrapper
             display: flex
             justify-content: space-between
-            align-items: flex-start
+            align-items: center
             width: 1100px
 
             @media screen and ( max-width: 1125px )
@@ -119,50 +119,12 @@ $lg: 1920px
                 justify-content: flex-start
                 align-items: flex-start
 
-        // .wrapper
-        //     display: flex
-        //     justify-content: space-between
-        //     align-items: center
-        //     width: 800px
-
-        //     @media screen and ( max-width: 875px )
-        //         flex-direction: column
-        //         width: 100%
-        //         justify-content: center
-        //         padding: 0 20px
-
-        //     .about-image
-        //         width: 350px
-        //         height: auto
-        //         margin-right: 50px
-
-        //         @media screen and ( max-width: 875px )
-        //             margin-bottom: 20px
-        //             margin-right: 0
-
-        //         @media screen and ( max-width: $xs )
-        //             width: 100%
-
-        //     .about-text
-        //         font-size: 25px
-        //         margin-block: 10px
-
-        //         @media screen and ( max-width: 875px )
-        //             text-align: center
-        //             font-size: 20px
-
-        //     .paragraph
-        //         display: flex
-        //         flex-direction: column
-        //         justify-content: center
-        //         align-items: center
-
         .categories
             display: flex
             justify-content: center
             align-items: center
             width: fit-content
-            margin-top: 20px
+            margin: 30px 0 20px
 
             @media screen and ( max-width: $sm )
                 flex-direction: column
@@ -201,6 +163,25 @@ $lg: 1920px
                     bottom: 0
                     left: 0
                     // background-color: rgba(lightblue, 0.2)
+
+        .services
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 100%
+            margin-top: 20px
+
+            .icon-wrapper
+                width: 100%
+                height: 100px
+                display: flex
+                justify-content: center
+                align-items: center
+                margin-bottom: 10px
+
+                .icon
+                    font-size: 100px
+                    color: #0f172a
 
     .statistics
         display: flex
