--- a/src/components/Homepage/styles.sass
+++ b/src/components/Homepage/styles.sass
@@ -108,7 +108,7 @@ $lg: 1920px
                 object-fit: cover
                 object-position: 50% 70%
                 border-radius: 10px
-                margin-right: 25px
+                margin-right: 30px
 
                 @media screen and ( max-width: 1125px )
                     display: none
@@ -144,6 +144,11 @@ $lg: 1920px
                 @media screen and ( max-width: $xs )
                     width: 100%
 
+                &:hover > img
+                    opacity: 0.5
+                    transform: scale(1.2)
+                    filter: blur(0)
+
                 img
                     width: 100%
                     height: 100%
@@ -152,17 +157,11 @@ $lg: 1920px
                     filter: blur(2px)
                     transition: 1s
 
-                    &:hover
-                        opacity: 0.5
-                        transform: scale(1.2)
-                        filter: blur(0)
-
                 .category-button
                     padding: 15px
                     position: absolute
                     bottom: 0
                     left: 0
-                    // background-color: rgba(lightblue, 0.2)
 
         .services
             display: flex
